# sslwarp

./: .air.toml  .env.example  .gitignore  Cargo.toml  Makefile  README.md  config.example.toml  config.example.yml  flake.nix  go.mod  go.sum
cmd/: main.go  main_test.go
internal/client/: client.go  cliest_test.go
internal/config/: config.go
internal/server/: server.go  server.rs  server_test.go
internal/web/: adminHandlers.go  clientHandlers.go  static_dev.go  static_prod.go  web.go
src/: main.rs
src/client/: client.rs
src/config/: config.rs
src/server/: server.rs
views/auth/: login.templ
views/css/: app.css
views/home/: home.templ
views/layouts/: base.templ
