[package]
name = "sslwarp"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.13", features = ["derive"] }
dotenv = "0.15.0"
hyper = { version = "1.4.1", features = ["full"] }
merde_json = "2.1.2"
serde = { version = "1.0.204", features = ["derive"] }
tokio = { version = "1.39.2", features = ["full"] }
toml = "0.8.19"
uuid = { version = "1.10.0", features = ["v4"] }
